ci: resolve code scanning alerts

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -129,8 +129,10 @@ jobs:
           name: ${{ github.event.repository.name }}-${{ matrix.project }}-${{ matrix.runtime }}-${{ github.sha }}
           path: bin/
 
-  build-windows-installer:
+  build-cli-windows-installer:
     needs: build-app
+    permissions:
+      contents: read
     strategy:
       matrix:
         include:
