chore: update .gitattributes

--- a/.gitattributes
+++ b/.gitattributes
@@ -2,7 +2,7 @@
 
 # Auto detect text files and perform LF normalization
 *          text=auto
-*          eol=lf
+
 #
 # The above will handle all files NOT found below
 #
@@ -102,7 +102,7 @@
 # Auto detect text files and perform LF normalization
 *          text=auto
 
-*.cs       text diff=csharp
+*.cs       text diff=csharp eol=lf
 *.cshtml   text diff=html
 *.csx      text diff=csharp
 *.sln      text eol=crlf
