--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,10 +8,10 @@ updates:
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
-      interval: "weekly"
+      interval: "daily"
   - package-ecosystem: "nuget"
     directories:
-      - Lip
+      - Golang.*
       - Lip.*
     schedule:
-      interval: "weekly"
+      interval: "daily"
