--- a/.gitattributes
+++ b/.gitattributes
@@ -102,8 +102,12 @@
 # Auto detect text files and perform LF normalization
 *          text=auto
 
-*.cs       text diff=csharp eol=lf
+*.cs       text diff=csharp
 *.cshtml   text diff=html
 *.csx      text diff=csharp
 *.sln      text eol=crlf
 *.csproj   text eol=crlf
+
+
+
+*.cs       text diff=csharp eol=crlf
