--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,7 +8,7 @@ updates:
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
-      interval: "daily"
+      interval: "monthly"
   - package-ecosystem: "nuget"
     directories:
       - Golang.Org.X.Mod
@@ -20,4 +20,4 @@ updates:
       - Lip.Migration
       - Lip.Migration.Tests
     schedule:
-      interval: "daily"
+      interval: "monthly"
