--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -90,11 +90,23 @@ jobs:
       contents: read
     strategy:
       matrix:
+        runtime:
+          - arm64
+          - x64
+        self-contained:
+          - true
+          - false
         include:
           - runtime: arm64
             runs-on: windows-latest
           - runtime: x64
             runs-on: windows-latest
+          - self-contained: true
+            sc-flag: -self-contained
+            ds-flag: -p:DefineConstants="DisableDotNetCheck"
+          - self-contained: false
+            sc-flag: ''
+            ds-flag: ''
     runs-on: ${{ matrix.runs-on }}
     steps:
       - uses: actions/checkout@v4
@@ -111,31 +123,28 @@ jobs:
           replace-with: ""
 
       # Prevent versions like 1.1.1-rc.1
-      - name: Modify version of installer
-        run: |
+      - run: |
           $inputString = "${{ steps.get-version.outputs.replaced }}"
           if ($inputString -match "^(.*?)-") { $result = $matches[1] } else { $result = $inputString }
           (Get-Content Package.wxs) -replace '0\.0\.0\.0', "$result.0" | Set-Content Package.wxs
         shell: pwsh
         working-directory: Lip.Installer
 
-      - name: Download cli artifact
-        uses: actions/download-artifact@v4
+      - uses: actions/download-artifact@v4
         with:
-          name: ${{ github.event.repository.name }}-Lip.CLI-win-${{ matrix.runtime }}-${{ github.sha }}
+          name: ${{ github.event.repository.name }}-Lip.CLI-win-${{ matrix.runtime }}${{ matrix.sc-flag }}-${{ github.sha }}
           path: bin/
 
-      - name: Build installer
-        run: >
+      - run: >
           dotnet build Lip.Installer
           --configuration Release
           --output bin-installer
-          --p:Platform=${{ matrix.runtime }}
+          -p:Platform=${{ matrix.runtime }}
+          ${{ matrix.ds-flag }}
 
-      - name: Upload installer
-        uses: actions/upload-artifact@v4
+      - uses: actions/upload-artifact@v4
         with:
-          name: ${{ github.event.repository.name }}-Lip.Installer-win-${{ matrix.runtime }}-${{ github.sha }}
+          name: ${{ github.event.repository.name }}-Lip.Installer-win-${{ matrix.runtime }}${{ matrix.sc-flag }}-${{ github.sha }}
           path: bin-installer/
 
   update-release-notes:
@@ -249,18 +258,21 @@ jobs:
         runtime:
           - win-arm64
           - win-x64
+        sc-flag:
+          - ''
+          - -self-contained
     steps:
       - uses: actions/checkout@v4
 
       - uses: actions/download-artifact@v4
         with:
-          name: ${{ github.event.repository.name }}-Lip.Installer-${{ matrix.runtime }}-${{ github.sha }}
+          name: ${{ github.event.repository.name }}-Lip.Installer-${{ matrix.runtime }}${{ matrix.sc-flag }}-${{ github.sha }}
           path: artifact-installer/
 
       - run: |
-          mv artifact-installer/${{ matrix.lang }}/Lip.Installer.msi artifact-installer/${{ github.event.repository.name }}-cli-${{ matrix.runtime }}-${{ matrix.lang }}.msi
+          mv artifact-installer/${{ matrix.lang }}/Lip.Installer.msi artifact-installer/${{ github.event.repository.name }}-cli-${{ matrix.runtime }}${{ matrix.sc-flag }}-${{ matrix.lang }}.msi
 
       - uses: softprops/action-gh-release@v2
         with:
           files: |
-            artifact-installer/${{ github.event.repository.name }}-cli-${{ matrix.runtime }}-${{ matrix.lang }}.msi
+            artifact-installer/${{ github.event.repository.name }}-cli-${{ matrix.runtime }}${{ matrix.sc-flag }}-${{ matrix.lang }}.msi
